--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>1.3.1</version>
@@ -57,7 +57,7 @@
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter-test</artifactId>
 			<version>1.3.0</version>
-		</dependency>
+		</dependency> -->
 
 		<!-- Lombok -->
 		<dependency>
